Fix extra whitespace between types in topology sidebar

--- a/frontend/packages/dev-console/src/components/topology/TopologyPage.scss
+++ b/frontend/packages/dev-console/src/components/topology/TopologyPage.scss
@@ -73,4 +73,19 @@
   .pf-topology-container {
     display: flex;
   }
+  .pf-topology-side-bar {
+    display: flex;
+    flex-direction: column;
+  }
+  .pf-topology-side-bar__body {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    .resource-overview {
+      flex: 1;
+    }
+    .overview__sidebar-pane-body {
+      min-height: initial;
+    }
+  }
 }
